src/test/ui/fn/fn-fat-arrow-return2.stderr
error: return types are denoted using `->`
  --> $DIR/fn-fat-arrow-return2.rs:1:8
   |
LL | fn a() => impl Fn() => bool {
   |        ^^ help: use `->` instead

error: expected `;` or `{`, found `=>`
  --> $DIR/fn-fat-arrow-return2.rs:1:21
   |
LL | fn a() => impl Fn() => bool {
   |                     ^^ expected `;` or `{`

error: aborting due to 2 previous errors

